feat: auto-generate changelog feature added

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postbootstrap": "lerna run prepare --stream",
     "prebootstrap": "yarn",
     "publish": "node scripts/publish.js",
-    "start": "yarn run bootstrap && lerna run watch --parallel --ignore @expo/dev-tools"
+    "start": "yarn run bootstrap && lerna run watch --parallel --ignore @expo/dev-tools",
+    "changelog": "node scripts/generateChangelog.js"
   },
   "husky": {
     "hooks": {
